--- a/P004355.opf/meta.yml
+++ b/P004355.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P004355
+id: P004355
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG9299
   title: སླེ་ལུང་བཞད་པའི་རྡོ་རྗེའི་གསུང་རྩོམ་སྐོར་གྱི་ཟིན་ཐོ།
-  volume: ''
   author: ''
+  volumes: {}
