--- a/P004355.opf/layers/v001/pagination.yml
+++ b/P004355.opf/layers/v001/pagination.yml
@@ -3,660 +3,566 @@ annotation_type: pagination
 revision: '00001'
 annotations:
   f4fcbf93c3644bda90a7e24c65aea58a:
-    page_index: 1a
-    page_info: null
-    reference: I1KG93880001
+    imgnum: 1
+    reference: I1KG93880001.jpg
     span:
       start: 0
       end: 598
   f49ee319a1584dccba5e64f6cca182d4:
-    page_index: 2a
-    page_info: null
-    reference: I1KG93880003
+    imgnum: 3
+    reference: I1KG93880003.jpg
     span:
       start: 603
       end: 610
   a7974a0a863247ba859c074edd242fd5:
-    page_index: 3a
-    page_info: null
-    reference: I1KG93880005
+    imgnum: 5
+    reference: I1KG93880005.jpg
     span:
       start: 615
       end: 615
   1690cba1eb79495f89a7b6b226f10bef:
-    page_index: 4a
-    page_info: null
-    reference: I1KG93880007
+    imgnum: 7
+    reference: I1KG93880007.jpg
     span:
       start: 620
       end: 643
   8566e95ff1ec436e8bf75b39ccfc25d5:
-    page_index: 5a
-    page_info: null
-    reference: I1KG93880009
+    imgnum: 9
+    reference: I1KG93880009.jpg
     span:
       start: 648
       end: 3570
   ed0a3d9f019e43838b00fbffe98090f0:
-    page_index: 5b
-    page_info: null
-    reference: I1KG93880010
+    imgnum: 10
+    reference: I1KG93880010.jpg
     span:
       start: 3575
       end: 6737
   b906ce90323045c1911ed11393a5341e:
-    page_index: 6a
-    page_info: null
-    reference: I1KG93880011
+    imgnum: 11
+    reference: I1KG93880011.jpg
     span:
       start: 6742
       end: 10062
   c2a6f08b38624ea3b52ae0ada08f20f7:
-    page_index: 6b
-    page_info: null
-    reference: I1KG93880012
+    imgnum: 12
+    reference: I1KG93880012.jpg
     span:
       start: 10067
       end: 13213
   db3d55c6b8e74668a5fa6c384d07e169:
-    page_index: 7a
-    page_info: null
-    reference: I1KG93880013
+    imgnum: 13
+    reference: I1KG93880013.jpg
     span:
       start: 13218
       end: 16242
   627f3fddc1824e2e8667ad08ee2d6b5d:
-    page_index: 7b
-    page_info: null
-    reference: I1KG93880014
+    imgnum: 14
+    reference: I1KG93880014.jpg
     span:
       start: 16247
       end: 19213
   3b8bd95fa4de4aec9f9d3ed97405bd21:
-    page_index: 8a
-    page_info: null
-    reference: I1KG93880015
+    imgnum: 15
+    reference: I1KG93880015.jpg
     span:
       start: 19218
       end: 22094
   ea31222226514226ac351481e93ea6d3:
-    page_index: 8b
-    page_info: null
-    reference: I1KG93880016
+    imgnum: 16
+    reference: I1KG93880016.jpg
     span:
       start: 22099
       end: 24967
   faebb769abef48e88e4b009f1917f206:
-    page_index: 9a
-    page_info: null
-    reference: I1KG93880017
+    imgnum: 17
+    reference: I1KG93880017.jpg
     span:
       start: 24972
       end: 27754
   d11c210d510444568a159e33686ff41b:
-    page_index: 9b
-    page_info: null
-    reference: I1KG93880018
+    imgnum: 18
+    reference: I1KG93880018.jpg
     span:
       start: 27759
       end: 31042
   70306e18abfb49348635df4b7a4e4d5f:
-    page_index: 10a
-    page_info: null
-    reference: I1KG93880019
+    imgnum: 19
+    reference: I1KG93880019.jpg
     span:
       start: 31047
       end: 34211
   1add120d6737403e8b085f80c59b6711:
-    page_index: 10b
-    page_info: null
-    reference: I1KG93880020
+    imgnum: 20
+    reference: I1KG93880020.jpg
     span:
       start: 34216
       end: 37282
   ca6c6af55ea6435fbf7f65bbfe2ab28c:
-    page_index: 11a
-    page_info: null
-    reference: I1KG93880021
+    imgnum: 21
+    reference: I1KG93880021.jpg
     span:
       start: 37287
       end: 40117
   2dd77319f12b4826b109fea6a8a0af06:
-    page_index: 11b
-    page_info: null
-    reference: I1KG93880022
+    imgnum: 22
+    reference: I1KG93880022.jpg
     span:
       start: 40122
       end: 41665
   57a06d1e2ff149349e1ea990db1d243c:
-    page_index: 12a
-    page_info: null
-    reference: I1KG93880023
+    imgnum: 23
+    reference: I1KG93880023.jpg
     span:
       start: 41670
       end: 43125
   f3cfc52f61994f5b891d427aa7bc05b4:
-    page_index: 12b
-    page_info: null
-    reference: I1KG93880024
+    imgnum: 24
+    reference: I1KG93880024.jpg
     span:
       start: 43130
       end: 44857
   8c4ddbd09bbb4304bc43166cd0302930:
-    page_index: 13a
-    page_info: null
-    reference: I1KG93880025
+    imgnum: 25
+    reference: I1KG93880025.jpg
     span:
       start: 44862
       end: 46337
   132c1211ee84451998235e8de852749a:
-    page_index: 13b
-    page_info: null
-    reference: I1KG93880026
+    imgnum: 26
+    reference: I1KG93880026.jpg
     span:
       start: 46342
       end: 47997
   ad3074a86d124781a12c10882e48bcf4:
-    page_index: 14a
-    page_info: null
-    reference: I1KG93880027
+    imgnum: 27
+    reference: I1KG93880027.jpg
     span:
       start: 48002
       end: 49335
   52a12c00279d4358a1b15488395e3dc2:
-    page_index: 14b
-    page_info: null
-    reference: I1KG93880028
+    imgnum: 28
+    reference: I1KG93880028.jpg
     span:
       start: 49340
       end: 51088
   ab402ac7e384499eb92ba5fdec3848db:
-    page_index: 15a
-    page_info: null
-    reference: I1KG93880029
+    imgnum: 29
+    reference: I1KG93880029.jpg
     span:
       start: 51093
       end: 52508
   3133d31d60a749998b1aff87ec62ac9d:
-    page_index: 15b
-    page_info: null
-    reference: I1KG93880030
+    imgnum: 30
+    reference: I1KG93880030.jpg
     span:
       start: 52513
       end: 53697
   d27457e8290b4295a3558f0c98cf69ee:
-    page_index: 16a
-    page_info: null
-    reference: I1KG93880031
+    imgnum: 31
+    reference: I1KG93880031.jpg
     span:
       start: 53702
       end: 54173
   84aeaaf0183b462dba94d457a2d1e09b:
-    page_index: 16b
-    page_info: null
-    reference: I1KG93880032
+    imgnum: 32
+    reference: I1KG93880032.jpg
     span:
       start: 54178
       end: 54234
   a383aa0fc26d4f62a48ac277b2615f4a:
-    page_index: 17a
-    page_info: null
-    reference: I1KG93880033
+    imgnum: 33
+    reference: I1KG93880033.jpg
     span:
       start: 54239
       end: 54646
   eaed135ec1064845bb0d25ddff4c5234:
-    page_index: 17b
-    page_info: null
-    reference: I1KG93880034
+    imgnum: 34
+    reference: I1KG93880034.jpg
     span:
       start: 54651
       end: 54818
   ac5fefacd2ff41cfbee560f13d4dc561:
-    page_index: 18a
-    page_info: null
-    reference: I1KG93880035
+    imgnum: 35
+    reference: I1KG93880035.jpg
     span:
       start: 54823
       end: 55134
   fcecd91fb79d49c78c80443f3a79c876:
-    page_index: 18b
-    page_info: null
-    reference: I1KG93880036
+    imgnum: 36
+    reference: I1KG93880036.jpg
     span:
       start: 55139
       end: 55172
   59a9427f32d64df8a686614574f63703:
-    page_index: 19a
-    page_info: null
-    reference: I1KG93880037
+    imgnum: 37
+    reference: I1KG93880037.jpg
     span:
       start: 55177
       end: 57469
   40b0cc2346b8458192c1fd6038f9835c:
-    page_index: 19b
-    page_info: null
-    reference: I1KG93880038
+    imgnum: 38
+    reference: I1KG93880038.jpg
     span:
       start: 57474
       end: 57498
   1f67a8a030b442c0a680d4327be7383f:
-    page_index: 20a
-    page_info: null
-    reference: I1KG93880039
+    imgnum: 39
+    reference: I1KG93880039.jpg
     span:
       start: 57503
       end: 60446
   c24057e2aabe481a9e630c8b3e7ef62a:
-    page_index: 21a
-    page_info: null
-    reference: I1KG93880041
+    imgnum: 41
+    reference: I1KG93880041.jpg
     span:
       start: 60451
       end: 63282
   1c04b7bebbf940fda2d3d7da54ad3001:
-    page_index: 22a
-    page_info: null
-    reference: I1KG93880043
+    imgnum: 43
+    reference: I1KG93880043.jpg
     span:
       start: 63287
       end: 65872
   e049b46ed85b4b1e87af9cd3e9e0c5b0:
-    page_index: 23a
-    page_info: null
-    reference: I1KG93880045
+    imgnum: 45
+    reference: I1KG93880045.jpg
     span:
       start: 65877
       end: 68278
   ee07c8274e3047c49e7c7d856b0841c0:
-    page_index: 24a
-    page_info: null
-    reference: I1KG93880047
+    imgnum: 47
+    reference: I1KG93880047.jpg
     span:
       start: 68283
       end: 70679
   19e98fbfa2e2455bace0c85da7c163d7:
-    page_index: 25a
-    page_info: null
-    reference: I1KG93880049
+    imgnum: 49
+    reference: I1KG93880049.jpg
     span:
       start: 70684
       end: 73050
   a32757633084472d853c02961497cda6:
-    page_index: 26a
-    page_info: null
-    reference: I1KG93880051
+    imgnum: 51
+    reference: I1KG93880051.jpg
     span:
       start: 73055
       end: 75464
   9550df7f0e3c42fcb32074682fa735cd:
-    page_index: 27a
-    page_info: null
-    reference: I1KG93880053
+    imgnum: 53
+    reference: I1KG93880053.jpg
     span:
       start: 75469
       end: 78264
   14d4952ee00749b494405706f44add39:
-    page_index: 28a
-    page_info: null
-    reference: I1KG93880055
+    imgnum: 55
+    reference: I1KG93880055.jpg
     span:
       start: 78269
       end: 80945
   93115fc41030433fa5629665db405610:
-    page_index: 29a
-    page_info: null
-    reference: I1KG93880057
+    imgnum: 57
+    reference: I1KG93880057.jpg
     span:
       start: 80950
       end: 83789
   651438c83cde48f6aeeef80ccc90c355:
-    page_index: 30a
-    page_info: null
-    reference: I1KG93880059
+    imgnum: 59
+    reference: I1KG93880059.jpg
     span:
       start: 83794
       end: 87083
   949de9b386444fc3a6754f15b339ca1c:
-    page_index: 31a
-    page_info: null
-    reference: I1KG93880061
+    imgnum: 61
+    reference: I1KG93880061.jpg
     span:
       start: 87088
       end: 88000
   a1b0c1cc0d244d79a8270749cba3da58:
-    page_index: 32a
-    page_info: null
-    reference: I1KG93880063
+    imgnum: 63
+    reference: I1KG93880063.jpg
     span:
       start: 88005
       end: 90811
   56541248030f491cadc5aefb4f1e5adf:
-    page_index: 33a
-    page_info: null
-    reference: I1KG93880065
+    imgnum: 65
+    reference: I1KG93880065.jpg
     span:
       start: 90816
       end: 93861
   58ac047d57db4dc9a9f6b5af637a6974:
-    page_index: 34a
-    page_info: null
-    reference: I1KG93880067
+    imgnum: 67
+    reference: I1KG93880067.jpg
     span:
       start: 93866
       end: 96760
   e5127e01cdf44698ad8c729b510c8802:
-    page_index: 35a
-    page_info: null
-    reference: I1KG93880069
+    imgnum: 69
+    reference: I1KG93880069.jpg
     span:
       start: 96765
       end: 99390
   99bda54867db4a96abccf0fd11ef9803:
-    page_index: 36a
-    page_info: null
-    reference: I1KG93880071
+    imgnum: 71
+    reference: I1KG93880071.jpg
     span:
       start: 99395
       end: 101713
   06c030ea38b145a3b074aabad059ac5e:
-    page_index: 37a
-    page_info: null
-    reference: I1KG93880073
+    imgnum: 73
+    reference: I1KG93880073.jpg
     span:
       start: 101718
       end: 104115
   66d9934126204cef8a5e13d5c8713382:
-    page_index: 38a
-    page_info: null
-    reference: I1KG93880075
+    imgnum: 75
+    reference: I1KG93880075.jpg
     span:
       start: 104120
       end: 106438
   726fc1dfac2b4d97a82df5f03bd5e91f:
-    page_index: 39a
-    page_info: null
-    reference: I1KG93880077
+    imgnum: 77
+    reference: I1KG93880077.jpg
     span:
       start: 106443
       end: 108969
   ab0475d534c542cd94f700857e303792:
-    page_index: 40a
-    page_info: null
-    reference: I1KG93880079
+    imgnum: 79
+    reference: I1KG93880079.jpg
     span:
       start: 108974
       end: 111313
   1510c6fbd7634bfba9f4ed611084f8ff:
-    page_index: 41a
-    page_info: null
-    reference: I1KG93880081
+    imgnum: 81
+    reference: I1KG93880081.jpg
     span:
       start: 111318
       end: 114239
   b299309c75d8415ba45c5495715db839:
-    page_index: 42a
-    page_info: null
-    reference: I1KG93880083
+    imgnum: 83
+    reference: I1KG93880083.jpg
     span:
       start: 114244
       end: 115451
   1897942fc52d4ce9ac0c01aca51d803b:
-    page_index: 43a
-    page_info: null
-    reference: I1KG93880085
+    imgnum: 85
+    reference: I1KG93880085.jpg
     span:
       start: 115456
       end: 117570
   67915d58c6b94ebbb55f13c82cb0fe66:
-    page_index: 43b
-    page_info: null
-    reference: I1KG93880086
+    imgnum: 86
+    reference: I1KG93880086.jpg
     span:
       start: 117575
       end: 119517
   e2687771a84947619a87a3d31a15d0b4:
-    page_index: 44a
-    page_info: null
-    reference: I1KG93880087
+    imgnum: 87
+    reference: I1KG93880087.jpg
     span:
       start: 119522
       end: 121498
   bb1db0a47eaa457fb7c3a2f45bfb7aab:
-    page_index: 44b
-    page_info: null
-    reference: I1KG93880088
+    imgnum: 88
+    reference: I1KG93880088.jpg
     span:
       start: 121503
       end: 124014
   16e31c7230cb4bbda2e0a990d562730d:
-    page_index: 45a
-    page_info: null
-    reference: I1KG93880089
+    imgnum: 89
+    reference: I1KG93880089.jpg
     span:
       start: 124019
       end: 126512
   72e70cc12da4416a95dd7318675e2bcd:
-    page_index: 45b
-    page_info: null
-    reference: I1KG93880090
+    imgnum: 90
+    reference: I1KG93880090.jpg
     span:
       start: 126517
       end: 129192
   8230b31903914d5f9b8a82caa1e90640:
-    page_index: 46a
-    page_info: null
-    reference: I1KG93880091
+    imgnum: 91
+    reference: I1KG93880091.jpg
     span:
       start: 129197
       end: 131715
   5d5d5d8c0b6f476c80ee0ee9edebf34f:
-    page_index: 46b
-    page_info: null
-    reference: I1KG93880092
+    imgnum: 92
+    reference: I1KG93880092.jpg
     span:
       start: 131720
       end: 134007
   7a681a0d8aaa4304a82f6ed66f12f010:
-    page_index: 47a
-    page_info: null
-    reference: I1KG93880093
+    imgnum: 93
+    reference: I1KG93880093.jpg
     span:
       start: 134012
       end: 134504
   fa8eaeb65c0043ffa2012f06d2cfcfa6:
-    page_index: 48a
-    page_info: null
-    reference: I1KG93880095
+    imgnum: 95
+    reference: I1KG93880095.jpg
     span:
       start: 134509
       end: 136568
   e302ab27c9c54ef6be3d07307578a508:
-    page_index: 49a
-    page_info: null
-    reference: I1KG93880097
+    imgnum: 97
+    reference: I1KG93880097.jpg
     span:
       start: 136573
       end: 139025
   b33f78c21cfb40449a93320bd400398a:
-    page_index: 50a
-    page_info: null
-    reference: I1KG93880099
+    imgnum: 99
+    reference: I1KG93880099.jpg
     span:
       start: 139030
       end: 141575
   1c6b67878b2e4d85a24e7ccebe6453f1:
-    page_index: 51a
-    page_info: null
-    reference: I1KG93880101
+    imgnum: 101
+    reference: I1KG93880101.jpg
     span:
       start: 141580
       end: 143815
   70322575ec334966a54f7035d6e15b69:
-    page_index: 52a
-    page_info: null
-    reference: I1KG93880103
+    imgnum: 103
+    reference: I1KG93880103.jpg
     span:
       start: 143820
       end: 146314
   339dbcb61a204803a7309bf9ee21173a:
-    page_index: 53a
-    page_info: null
-    reference: I1KG93880105
+    imgnum: 105
+    reference: I1KG93880105.jpg
     span:
       start: 146319
       end: 149291
   484a51ab016f4e9b99e87b9cb422791d:
-    page_index: 54a
-    page_info: null
-    reference: I1KG93880107
+    imgnum: 107
+    reference: I1KG93880107.jpg
     span:
       start: 149296
       end: 152288
   d7bc42706ea44284b06f5a4e21f3ca9d:
-    page_index: 55a
-    page_info: null
-    reference: I1KG93880109
+    imgnum: 109
+    reference: I1KG93880109.jpg
     span:
       start: 152293
       end: 154894
   bacfc14382f647248b00cde3c639d14d:
-    page_index: 56a
-    page_info: null
-    reference: I1KG93880111
+    imgnum: 111
+    reference: I1KG93880111.jpg
     span:
       start: 154899
       end: 157497
   8a2712beac1b43a89c892df942caae91:
-    page_index: 57a
-    page_info: null
-    reference: I1KG93880113
+    imgnum: 113
+    reference: I1KG93880113.jpg
     span:
       start: 157502
       end: 159692
   86209ed0153844cca4c05c8fe68c9c79:
-    page_index: 58a
-    page_info: null
-    reference: I1KG93880115
+    imgnum: 115
+    reference: I1KG93880115.jpg
     span:
       start: 159697
       end: 162175
   0d69b79cbd37491d81ad99e50149ab3e:
-    page_index: 59a
-    page_info: null
-    reference: I1KG93880117
+    imgnum: 117
+    reference: I1KG93880117.jpg
     span:
       start: 162180
       end: 164939
   a43a8422706c4570af59183124764070:
-    page_index: 60a
-    page_info: null
-    reference: I1KG93880119
+    imgnum: 119
+    reference: I1KG93880119.jpg
     span:
       start: 164944
       end: 167224
   cfcab9320c53493091d35e2d5c26838a:
-    page_index: 61a
-    page_info: null
-    reference: I1KG93880121
+    imgnum: 121
+    reference: I1KG93880121.jpg
     span:
       start: 167229
       end: 169514
   9daaeb18340f461cb20653f5812c4f7f:
-    page_index: 61b
-    page_info: null
-    reference: I1KG93880122
+    imgnum: 122
+    reference: I1KG93880122.jpg
     span:
       start: 169519
       end: 169530
   b9ecb22f8624419489e398162d7e448c:
-    page_index: 62a
-    page_info: null
-    reference: I1KG93880123
+    imgnum: 123
+    reference: I1KG93880123.jpg
     span:
       start: 169535
       end: 171903
   6f05f934ee224b81bd53a200e9ffe58d:
-    page_index: 63a
-    page_info: null
-    reference: I1KG93880125
+    imgnum: 125
+    reference: I1KG93880125.jpg
     span:
       start: 171908
       end: 172337
   1ec90a6c474a48149a035c08538e0de0:
-    page_index: 64a
-    page_info: null
-    reference: I1KG93880127
+    imgnum: 127
+    reference: I1KG93880127.jpg
     span:
       start: 172342
       end: 174797
   c372a916bc324988ba1c4bf9d1f11e1b:
-    page_index: 65a
-    page_info: null
-    reference: I1KG93880129
+    imgnum: 129
+    reference: I1KG93880129.jpg
     span:
       start: 174802
       end: 177402
   5d6deec357cc4339a30101f3e980f4ec:
-    page_index: 66a
-    page_info: null
-    reference: I1KG93880131
+    imgnum: 131
+    reference: I1KG93880131.jpg
     span:
       start: 177407
       end: 180138
   e0943bec36584d5b8a7677cadec295bc:
-    page_index: 67a
-    page_info: null
-    reference: I1KG93880133
+    imgnum: 133
+    reference: I1KG93880133.jpg
     span:
       start: 180143
       end: 183435
   4efdcb741e4e41cd86ae5cf8aad1306b:
-    page_index: 68a
-    page_info: null
-    reference: I1KG93880135
+    imgnum: 135
+    reference: I1KG93880135.jpg
     span:
       start: 183440
       end: 185731
   50f36cfe046e4ea297888a309178be23:
-    page_index: 69a
-    page_info: null
-    reference: I1KG93880137
+    imgnum: 137
+    reference: I1KG93880137.jpg
     span:
       start: 185736
       end: 188174
   f9e180a885524926867d0057601cd06c:
-    page_index: 70a
-    page_info: null
-    reference: I1KG93880139
+    imgnum: 139
+    reference: I1KG93880139.jpg
     span:
       start: 188179
       end: 191154
   d48750e838d54dcda160a5673969ca67:
-    page_index: 71a
-    page_info: null
-    reference: I1KG93880141
+    imgnum: 141
+    reference: I1KG93880141.jpg
     span:
       start: 191159
       end: 194456
   d36dea7e621a4657ab2c5e8278b40b12:
-    page_index: 72a
-    page_info: null
-    reference: I1KG93880143
+    imgnum: 143
+    reference: I1KG93880143.jpg
     span:
       start: 194461
       end: 196212
   bf61b29dd3474044a9c10a9670a56b6b:
-    page_index: 73b
-    page_info: null
-    reference: I1KG93880146
+    imgnum: 146
+    reference: I1KG93880146.jpg
     span:
       start: 196217
       end: 196227
   4be06949e5c04975b333b92684af2d18:
-    page_index: 74a
-    page_info: null
-    reference: I1KG93880147
+    imgnum: 147
+    reference: I1KG93880147.jpg
     span:
       start: 196232
       end: 196240
