--- a/P004355.opf/layers/v001/Pagination.yml
+++ b/P004355.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 892dc5cbadc248209a4182f2052a0a2f
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   f4fcbf93c3644bda90a7e24c65aea58a:
