--- a/P004355.opf/meta.yml
+++ b/P004355.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P004355
 initial_creation_type: ocr
+created_at: 27/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1KG9299
   title: སླེ་ལུང་བཞད་པའི་རྡོ་རྗེའི་གསུང་རྩོམ་སྐོར་གྱི་ཟིན་ཐོ།
